# silicon-cli

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-runtime.yml
docker/runtime/: Dockerfile  runtime-entrypoint.sh
silicon_cli/: __init__.py  cli.py  config.py  docker_runtime.py  glassagent.py  interface_cli.py  process.py  registry.py  stemcell.py  sync.py  ui.py  update.py
silicon_manager/: __init__.py  process.py  stemcell.py  sync.py  ui.py  update.py
tests/: test_docker_runtime.py  test_pull_args.py
