[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-cli"
version = "1.0.0"
description = "Silicon CLI — create, run, and manage your silicon instances."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Saket" }]
keywords = ["silicon", "cli", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []   # stdlib only — keeps the install bulletproof

[project.urls]
Homepage = "https://github.com/saket1225/silicon-cli"
Repository = "https://github.com/saket1225/silicon-cli"

[project.scripts]
silicon = "silicon_cli.cli:main"

[tool.setuptools]
packages = ["silicon_cli"]
